--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   <body>
     <!-- Wrapper -->
     <div>
+      <!-- Block Global Header   -->
       <header class="global-header">
+<!--    Global Header Logo is Element of Global Header      -->
         <div class="global-header__logo">
-          <a class="logo__link" href="#">
-            <img class="logo__link--img" src="#" alt="site logo" />
+<!--   Logo Component is a Block -->
+          <a class="logo" href="#">
+<!--     Logo  Image is an Element of Logo         -->
+            <img class="logo__img" src="#" alt="site logo" />
           </a>
         </div>
         <nav class="global-header__nav">
@@ -25,11 +29,12 @@
         </nav>
       </header>
       <main class="global-main">
-        <div class="global-main__hero">
+        <div class="hero">
           <div class="hero__text">
-            <h1 class="hero__text--title">The Axis Group</h1>
-            <h2 class="hero__text--subtitle">Financial Consulting.<span>Let us do the math.</span></h2>
+            <h1 class="hero__title">The Axis Group</h1>
+            <h2 class="hero__subtitle">Financial Consulting.<span>Let us do the math.</span></h2>
           </div>
+          
           <div class="hero__button">
             <a class="hero__button-link" href="#">Get Started</a>
           </div>
